<resources>
    <string name="app_name">FidoFriend</string>
    <string name="salir_de_la_aplicaci_n">Salir de la aplicación</string>
    <string name="open_menu">Abrir menú</string>
    <string name="close_menu">Cerrar menú</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Mi Perfil</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="correo_example_com">correo@example.com</string>
    <string name="isvet">isVet?</string>
    <string name="direccion">Direccion</string>
    <string name="description">Description</string>
    <string name="en_este_lugar_nuestro_compromiso_es_velar_por_la_salud_y_el_bienestar_de_tus_fieles_compa_eros_porque_en_cada_huella_encontramos_una_raz_n_para_cuidar">En este lugar, nuestro compromiso es velar por la salud y el bienestar de tus fieles compañeros, porque en cada huella, encontramos una razón para cuidar.</string>
    <string name="nombre">Nombre</string>
    <string name="price">Price</string>
    <string name="register_a_product">Registra un producto</string>
    <string name="name">Name</string>
    <string name="url_image">Url Image</string>
    <string name="save">Guardar</string>
    <string name="shopping_cart">Carrito de Compras</string>
    <string name="pet_hotel">Hotel-Mascota</string>
    <string name="grooming">Aseo</string>
    <string name="services">Servicios</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="sexo">Sexo de la Mascota...</string>
    <string name="age">Edad</string>
    <string name="list_of_pets">Lista de mis Mascotas</string>
    <string name="list_of_products">Lista de Productos</string>
    <string name="register_a_pet">Registra una Mascota</string>
    <string name="age_of_pet">Edad de la Mascota...</string>
    <string name="our_team">Nuestro Equipo</string>
    <string name="ingrese_sus_credenciales_para_loguearse">Ingrese sus credenciales para loguearse</string>
    <string name="ingrese_su_correo">Ingrese su correo...</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña...</string>
    <string name="log_in">Ingresar</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="registrate_aqu">Registrate Aquí</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="version">Version 3.0.0</string>
    <string name="startup">Hecho por: SoftSpecials</string>
    <string name="registrar">Registrar</string>
    <string name="ingrese_sus_datos_para_registrarse">Ingrese sus datos para registrarse.</string>
    <string name="nombres">Nombres...</string>
    <string name="apellidos">Apellidos...</string>
    <string name="correo_electr_nico">Correo electrónico...</string>
    <string name="contrase_a">Contraseña...</string>
    <string name="registrarse">Registrarse</string>
    <string name="est_s_registrado">¿Estás registrado?</string>
    <string name="logueate_aqu">Logueate aquí</string>
    <string name="eres_veterinario">¿Eres Veterinario?</string>
    <string name="my_pets">Mis Mascotas</string>
    <string name="appointments">Nuestro Equipo</string>
    <string name="meeting">Reunión</string>
    <string name="payment_method">Método de Pago</string>
    <string name="products">Productos</string>
    <string name="orders">Pedidos</string>
    <string name="settings">Configuración</string>
    <string name="sign_off">Cerrar Sesión</string>
    <string name="pay_here">Paga Aquí!!</string>
    <string name="total_s_0_00">Total S/. 0.00</string>
    <string name="registrar_aqu">Registrar Aquí</string>
    <string name="nombre_del_producto">Nombre del Producto...</string>
    <string name="descripcion_del_producto">Descripcion del Producto...</string>
    <string name="precio_del_producto">Precio del Producto...</string>
    <string name="guardar">Guardar</string>
    <string name="nombre_de_la_mascota">Nombre de la Mascota...</string>
    <string name="descripci_n_de_la_mascota">Descripción de la Mascota...</string>
    <string name="servicios_de_aseo">Servicios de Aseo</string>
    <string name="descripci_n">Descripción</string>
    <string name="registra_un_servicio">Registra un Servicio</string>
    <string name="nombre_del_servicio">Nombre del Servicio...</string>
    <string name="descripci_n_del_servicio">Descripción del Servicio...</string>
    <string name="servicios_de_hotel_mascota">Servicios de Hotel-Mascota</string>
    <string name="precio">Precio</string>
    <string name="precio_del_servicio">Precio del Servicio...</string>
</resources>