<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/skyblue"
    tools:context=".ui.activity.AddPetActivity">

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_a_pet"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="36sp"
        android:background="@color/blueshift"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editNamePet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:hint="@string/nombre_de_la_mascota"
        android:textAlignment="center"
        android:inputType="text"
        android:drawableLeft="@drawable/description_24"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editAgePet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:drawableLeft="@drawable/time_24"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="15dp"
        android:hint="@string/age_of_pet"
        app:layout_constraintTop_toBottomOf="@+id/editNamePet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editDescriptionPet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:hint="@string/descripci_n_de_la_mascota"
        android:textAlignment="center"
        android:inputType="text"
        android:drawableLeft="@drawable/description_24"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editAgePet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editSexPet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/sexo"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:inputType="text"
        android:drawableLeft="@drawable/pet_24"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editDescriptionPet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editImagePet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/url_image"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:inputType="text"
        android:drawableLeft="@drawable/image_24"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editSexPet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSavePet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="20sp"
        android:backgroundTint="@color/blueshift"
        android:drawableLeft="@drawable/check_24"
        app:layout_constraintTop_toBottomOf="@+id/editImagePet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
