<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagePet"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_marginStart="4dp"
            android:scaleType="centerCrop"
            app:civ_border_color="@color/blueshift"
            app:civ_border_width="1.5dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.177" />

        <TextView
            android:id="@+id/textNamePet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/nombre"
            app:layout_constraintTop_toTopOf="@+id/imagePet"
            app:layout_constraintStart_toEndOf="@+id/imagePet" />

        <TextView
            android:id="@+id/textAgePet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:text="@string/age"
            app:layout_constraintTop_toBottomOf="@+id/textNamePet"
            app:layout_constraintStart_toEndOf="@+id/imagePet" />

        <TextView
            android:id="@+id/textDescriptionPet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textAgePet"
            app:layout_constraintStart_toEndOf="@+id/imagePet" />

        <TextView
            android:id="@+id/textSexPet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textDescriptionPet"
            app:layout_constraintStart_toEndOf="@+id/imagePet" />


        <!--<Button
            android:id="@+id/btnAddToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/blueshift"
            android:drawableLeft="@drawable/payment_24"
            android:text="@string/add_to_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSexPet"
            app:layout_constraintVertical_bias="0.75" /> -->


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
