<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?android:attr/actionBarSize"
    tools:context=".ui.fragment.F_Profile">

    <View
        android:id="@+id/topBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/blueshift"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41" />

    <View
        android:id="@+id/bottomBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="centerCrop"
        app:civ_border_color="@color/skybluelight"
        app:civ_border_width="2dp"
        android:contentDescription="@string/profile"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:layout_constraintTop_toTopOf="@id/topBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/nameText" />

    <ImageView
        android:id="@+id/checkRegister"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@null"
        android:src="@drawable/verified_user_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_completo"
        android:fontFamily="@font/lobster"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo_example_com"
        android:fontFamily="@font/lobster"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/nameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp" />

    <TextView
        android:id="@+id/vetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isvet"
        android:textSize="18sp"
        android:fontFamily="@font/lobster"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/emailText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
